# telegram_handler

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  tox.ini
telegram_handler/: __init__.py  async_telegram_handler.py  blocking_telegram_handler.py  buffer.py  consts.py  functools_extension.py  handler.py
tests/: test_buffer.py  test_handler.py
